rb-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rb-frontend
spec:
  selector:
    matchLabels:
      app: rb-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: rb-frontend
    spec:
      containers:
        - name: rb-frontend
          image: teamjeffry/receptboken-frontend:k8s-test-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: rb-frontend-service
spec:
  type: ClusterIP
  selector:
    app: rb-frontend
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
