rb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rb-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: henlo.info
    http:
      paths:
      - backend:
          service:
            name: rb-backend-service
            port:
              number: 8080
        path: /api
        pathType: Prefix            
      - backend:
          service:
            name: rb-frontend-service
            port:
              number: 3000
        path: /
        pathType: Prefix        
status:
  loadBalancer:
    ingress:
      - hostname: localhost
